--- a/Portfolio/Pages/Content/Stage3/Bewijsmateriaal/4.md
+++ b/Portfolio/Pages/Content/Stage3/Bewijsmateriaal/4.md
@@ -1,7 +1,9 @@
 ﻿# Adviesrapport Blazor
 ## Inleiding
 
-Dit document beschrijft de belangrijkste voor- en nadelen van [Blazor](https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor). Het dient als bewijsmateriaal voor [Leerdoel 4 - Advies](Content/Stage3/Leerdoelen/4)
+Dit document beschrijft de belangrijkste voor- en nadelen van [Blazor](https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor). Het dient als bewijsmateriaal voor [Leerdoel 4 - Advies](Content/Stage3/Leerdoelen/4).
+
+Op basis van de informatie in dit document zullen softwareontwikkelaars kunnen beslissen of Blazor voor hun interresant is.
 
 ## Blazor
 Blazor is een onderdeel van Microsoft ASP.NET Core. Blazor geeft ontwikkelaars de mogelijkheid om interactieve websites te bouwen met behulp van C# in plaats van JavaScript.
@@ -17,14 +19,15 @@ Voor meer informatie over de verschillende varianten van Blazor, zie de [ASP.NET
 ## Voordelen
 De algemene voordelen van Blazor zijn als volgt;
 
- * De gehele Microsoft .NET library en alle libraries van derden kunnen gebruikt worden in het bouwen van een frontend. Ook is het mogelijk om alsnog JavaScript code en libraries aan te toepen vanuit uw C# code.
+ * De gehele Microsoft .NET library en de meeste libraries van derden kunnen gebruikt worden in het bouwen van een frontend. Ook is het mogelijk om alsnog JavaScript code en libraries aan te toepen vanuit uw C# code.
  * Het gehele framework is Open-Source. U kunt daarom precies zien hoe Blazor van binnen werkt, en is het ook mogelijk om uw eigen verbeteringen of _fork_ te maken.
- * Net zoals React, is Blazor component-based. Dit betekent dat de gehele website is opgebouwd uit losse, herbruikbare componenten. U kunt bijvoorbeeld een component bouwen die het weer laat zien, en deze vervolgens op meerdere paginas gebruiken zonder dat u de code hiervan steeds moet kopieeren.
+ * Net zoals React, is Blazor component-based. Dit betekent dat de gehele website is opgebouwd uit losse, herbruikbare componenten. U kunt bijvoorbeeld een component bouwen die het weer laat zien, en deze vervolgens op meerdere paginas gebruiken zonder dat u de code hiervan steeds moet kopieeren. Ook zijn er verschillende component libraries van derde partijen die u kunt gebruiken.
+ * Applicaties die MVC gebruiken hebben vaak paginas verspreidt staan over meerdere bestanden, waardoor het soms onoverzichterlijk wordt. Blazor heeft dit probleem niet; de HTML van de pagina en de C# code die de pagina aanstuurt kunnen beide in hetzelfde bestand worden geplaatst. Het is natuurlijk nog steeds mogelijk om paginas op te splitsen in meerdere bestanden, mocht dit nodig zijn.
 
 De voordelen van Blazor WASM zijn als volgt;
  * Met Blazor WASM wordt alle C# code eerst gecompileerd voordat het naar de browser wordt verstuurd. Deze gecompileerde code is over het algemeen sneller dan JavaScript, al zal dit verschil alleen merkbaar zijn voor enorm grote, hardware-intensieve applicaties.
  * Het is mogelijk om code die gebruikt wordt in een C# backend te hergebruiken in een Blazor WASM frontend. Dit zorgt voor meer consistentie in bijvoorbeeld in- en outputvalidatie.
- * In tegenstelling tot Blazor Server, zal een Blazor WASM applicatie blijven werken zelfs als de webserver offline gaat. Het is daarom ook mogelijk om *serverless deployment* te gebruiken, via bijvoorbeeld een CDN.
+ * In tegenstelling tot Blazor Server, zal een Blazor WASM applicatie blijven werken zelfs als de webserver offline gaat. Het is daarom ook mogelijk om een statische webserver te gebruiken. Ook is *serverless deployment* mogelijk, via bijvoorbeeld een CDN.
 
 De voordelen van Blazor Server zijn als volgt;
 * Omdat alle code op de server draait, is het niet nodig om ingevoerde gevens in de front- en backend apart te valideren. Neem bijvoorbeeld een veld voor emailadressen. Normaalgesproken zou de frontend controleren of de ingevoerde text een correct emailadres is, waarna de text wordt verstuurd naar de backend die vervolgens dezelfde controle uitvoert. Met Blazor Server is dit overbodig, omdat de frontend zelf geen enkele controles doet.
@@ -34,14 +37,19 @@ De voordelen van Blazor Server zijn als volgt;
 
 ## Nadelen
 Elke technologie heeft natuurlijk ook nadelen. De algemene nadelen van Blazor zijn als volgt;
-* Niet alle frontend developers zullen bekend zijn met C#. Zij zullen dit eerst moeten leren voordat ze met Blazor kunnen gaan werken, wat tijd en geld kan kosten.
+* Niet alle frontend developers zullen bekend zijn met C#. Zij zullen dit eerst moeten leren voordat ze met Blazor kunnen gaan werken, wat tijd en geld kan kosten. Bij bedrijven die tot nu toe geen gebruik hebben gemaakt van ASP.NET of andere C# backend frameworks zullen waarschijnlijk alle ontwikkelaars eerst C# moeten leren.
 
 De nadelen van Blazor WASM zijn als volgt;
-* De eerste keer dat een Blazor WASM applicatie uitgevoerd kan worden, moet de browser eerst een versie van de .NET Runtime downloaden. Deze versie is kleiner dan de normale versie, maar is nog steeds ongeveer 2.5 MB, wat waarschijnlijk enorm is vergeleken met de grootte van uw applicatie.
-* Er is op het moment weinig ondersteuning voor debugging tools zoals andere C# applicaties hebben. Dit kan betekenen dat het meer tijd zal kosten voor ontwikkelaars om bepaalde bugs te vinden.
+* De eerste keer dat een Blazor WASM applicatie uitgevoerd kan worden, moet de browser eerst een versie van de .NET Runtime downloaden. Deze versie is kleiner dan de normale versie, maar is nog steeds ongeveer 2.5 MB, wat waarschijnlijk enorm is vergeleken met de grootte van uw applicatie zelf.
+* Er is op het moment relatief weinig ondersteuning voor debugging tools zoals andere C# applicaties hebben. Dit kan betekenen dat het meer tijd zal kosten voor ontwikkelaars om bepaalde bugs te vinden. Het is bijvoorbeeld op het moment nog niet mogelijk om breakpoints te gebruiken in Blazor WASM.
 * Microsoft Internet Explorer en een groot deel van de internetbrowsers die Thin Clients vaak gebruiken hebben geen ondersteuning voor WebAssembly, waardooe Blazor WASM hierop niet zal werken. Dit kan een groot nadeel zijn voor organisaties die deze software en/of systemen gebruiken.
+* Libraries en packages die gebruik maken van native libraries zullen helaas niet werken. Deze zullen voor een runtime exception zorgen.
 
 De nadelen van Blazor Server zij als volgt;
 * Omdat alle C# code op de server draait, is Blazor Server over het algemeen zwaarder om te draaien dan andere webframeworks, zoals ASP.NET. Dit betekent dat er in sommige gevallen een krachtigere server nodig is om het systeem te kunnen draaien.
 * Blazor Server applicaties hebben altijd een verbinding nodig met de backend. Mocht deze verbinding worden verbroken, dan zal de gehele applicatie niet meer werken. Blazor WASM heeft dit probleem niet, omdat in dat geval de gehele applicatie naar de browser wordt verstuurd.
 * Vrijwel alle acties die gebruikers binnen uitvoeren moet via de SignalR verbinding naar de server worden verzonden, wat voor extra netwerkactiviteit zorgt. Ook betekent dit dat indien uw netwerk niet snel genoeg is of overbelast raakt, de applicatie zeer traag zal werken.
+
+## Mijn Advies
+Persoonlijk heb ik weinig interesse in frontend development. Echter maakt Blazor dit werk zo eenvoudig, dat zelfs ik elk bedrijf zou aanraden om Blazor te gebruiken. Blazor is zeer makkelijk op te pakken, waardor het mogelijk is om binnen enkele minuten een simpele interactieve website in elkaar te zetten. Zelfs voor C# ontwikkelaars die weinig ervaring hebben met het bouwen van websites zal het eenvoudig zijn om Blazor te gebruiken.
+
