--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/4.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/4.md
@@ -1,5 +1,5 @@
 ﻿# Leerdoel 4 - Advies
-Als ik een technologie goed wil beheersen, dan moet ik ook kunnen achterhalen wat de voor- en nadelen van deze technologie zijn. Deze informatie zou ik vervolgens kunnen gebruiken om een advies te geven over de bruikbaarheid van een technologie. Ik heb besloten hier een leerdoel van te maken.
+Als ik een technologie goed wil beheersen, dan moet ik ook kunnen achterhalen wat de voor- en nadelen van deze technologie zijn. Deze informatie zou ik vervolgens kunnen gebruiken om een advies te geven over de bruikbaarheid van een technologie. Tijdens mijn stage wilde ik leren hoe ik de voor- en nadelen van een technologie het besten kan onderzoeken en vervolgens te presenteren. Ik heb daarom besloten hier een leerdoel van te maken.
 
 ## Werkwijze
 
@@ -8,9 +8,9 @@ Ik ben van mening dat een ontwikkelaar het beste een beeld van een technologie k
 Daarom heb ik de voor- en nadelen van Blazor onderzocht door deze technologie te gebruiken tijdens mijn stageopdracht, en tijdens het opzetten van mijn portfolio. Ik heb hierdoor een goed beeld van de technologie weten op te bouwen.
 
 ## Bewijsmateriaal
-Om dit leerdoel te behalen heb ik besloten om een kort adviesrapport te schrijven, die beschrijft wat de voor- en nadelen van Blazor zijn, en of Blazor daadwerkelijk bruikbaar is voor de complexe projecten waar bedrijven vaak aan werken.
+Om dit leerdoel te behalen heb ik besloten om een kort adviesrapport te schrijven, die de belangrijkste voor- en nadelen van Blazor beschrijft. Dit adviesrapport is [hier](Content/Stage3/Bewijsmateriaal/4) te vinden.
 
-Het adviesrapport is [hier](Content/Stage3/Bewijsmateriaal/4) te vinden.
+Persoonlijk heb ik weinig interesse in frontend development. Echter maakt Blazor dit werk zo eenvoudig, dat zelfs ik elk bedrijf zou aanraden om Blazor te gebruiken. Blazor is zeer makkelijk op te pakken, waardor het mogelijk is om binnen enkele minuten een simpele interactieve website in elkaar te zetten. Zelfs voor C# ontwikkelaars die weinig ervaring hebben met het bouwen van websites zal het eenvoudig zijn om Blazor te gebruiken.
 
 
 ## Feedback bedrijfsbegeleider/collega
