--- a/Portfolio/Pages/Content/Stage3/Bewijsmateriaal/4.md
+++ b/Portfolio/Pages/Content/Stage3/Bewijsmateriaal/4.md
@@ -43,7 +43,7 @@ De nadelen van Blazor WASM zijn als volgt;
 * De eerste keer dat een Blazor WASM applicatie uitgevoerd kan worden, moet de browser eerst een versie van de .NET Runtime downloaden. Deze versie is kleiner dan de normale versie, maar is nog steeds ongeveer 2.5 MB, wat waarschijnlijk enorm is vergeleken met de grootte van uw applicatie zelf.
 * Er is op het moment relatief weinig ondersteuning voor debugging tools zoals andere C# applicaties hebben. Dit kan betekenen dat het meer tijd zal kosten voor ontwikkelaars om bepaalde bugs te vinden. Het is bijvoorbeeld op het moment nog niet mogelijk om breakpoints te gebruiken in Blazor WASM.
 * Microsoft Internet Explorer en een groot deel van de internetbrowsers die Thin Clients vaak gebruiken hebben geen ondersteuning voor WebAssembly, waardooe Blazor WASM hierop niet zal werken. Dit kan een groot nadeel zijn voor organisaties die deze software en/of systemen gebruiken.
-* Libraries en packages die gebruik maken van native libraries zullen helaas niet werken. Deze zullen voor een runtime exception zorgen.
+* Libraries en packages die gebruik maken van native libraries zullen helaas niet werken. Zo zal de `System.Data.SQLite` package niet werken, omdat dit een wrapper is voor een C++ library.
 
 De nadelen van Blazor Server zij als volgt;
 * Omdat alle C# code op de server draait, is Blazor Server over het algemeen zwaarder om te draaien dan andere webframeworks, zoals ASP.NET. Dit betekent dat er in sommige gevallen een krachtigere server nodig is om het systeem te kunnen draaien.
