--- a/Portfolio/Pages/Content/Stage3/Bewijsmateriaal/6.md
+++ b/Portfolio/Pages/Content/Stage3/Bewijsmateriaal/6.md
@@ -1,10 +1,10 @@
 ﻿# Technisch Ontwerp - Reddit Bot
 ## Inleiding
-In de afgelopen 2 jaar is de [Minecraft community](https://reddit.com/r/Minecraft) enorm gegroeid. Het aantal gebruikers is in die tijd [verviervoudigd](https://subredditstats.com/r/Minecraft), en met 4 miljoen gebruikers is het nu de 69ste grootste community op Reddit. Met 1400 nieuwe posts per dag is het tevens ook de 12ste meet actieve community op Reddit geworden.
+In de afgelopen 2 jaar is de [Minecraft community](https://reddit.com/r/Minecraft) enorm gegroeid. Het aantal gebruikers is in die tijd [verviervoudigd](https://subredditstats.com/r/Minecraft), en met 4 miljoen gebruikers is het nu de 66ste grootste community op Reddit. Met bijna 1600 nieuwe posts per dag is het tevens ook de 13ste meet actieve community op Reddit geworden.
 
-Het moderator team dat de regels van de community handhaaft heeft echter veel moeite om deze groei bij te benen. Het lukt ons niet om alle nieuwe posts te controleren op overtredingen, wat ervoor zorgt dat er regelmatig posts op de hoofdpagina verschijnen die al lang verwijderd hadden moeten worden.
+Het moderator team dat de regels van de community handhaaft heeft echter veel moeite om deze groei bij te benen. Het lukt ons niet om alle nieuwe posts te controleren op overtredingen, wat ervoor zorgt dat er soms posts op de hoofdpagina verschijnen die al lang verwijderd hadden moeten worden.
 
-Naast het zoeken naar extra moderators is er besloten dat wij een deel van ons werk gaan automatiseren, om zo de werkdruk te verlagen.
+Naast het zoeken naar extra moderators is er besloten dat wij gaan onderzoeken of het wellicht mogelijk is om een deel van ons werk te automatiseren doormiddel van een _Reddit Bot_. Een dergelijke bot zou 24/7 nieuwe posts kunnen controleren op de meest voorkomende overtredingen en deze automatisch kunnen verwijderen.
 
 ## Regels
 De handhaving van de volgende regels zal worden geautomatiseerd;
@@ -13,7 +13,7 @@ De handhaving van de volgende regels zal worden geautomatiseerd;
 * *Speak English* - Omdat Reddit, de Minecraft community, en de moderators allemaal grotendeels Engels praten, is het niet toegestaan om posts te plaatsen die in een niet-Engelse taal zijn geschreven.
 
 In de toekomst zal er ook worden gekeken of het mogelijk is om de handhaving voor de volgende regels te automatiseren;
-* *No memes* - Het is niet toegestaan om [internetmemes](https://nl.wikipedia.org/wiki/Internetmeme) te posten, omdat deze vaak van lage kwaliteit zijn en in zeer korte tijd kunnen worden gemaakt. Gebruikers worden verzocht om dit soort posts te plaatsen in de [MinecraftMemes community](https://www.reddit.com/r/MinecraftMemes/).
+* *No memes* - Het is niet toegestaan om [internetmemes](https://nl.wikipedia.org/wiki/Internetmeme) te posten, omdat deze vaak van lage kwaliteit zijn en in zeer korte tijd kunnen worden gemaakt. Gebruikers worden verzocht om dit soort posts te plaatsen in de [/r/MinecraftMemes community](https://www.reddit.com/r/MinecraftMemes/).
 * *No images of text* - Afbeeldingen die voornamelijk bestaan uit text en/of die zonder text hun oorspronkelijke doel verliezen, zijn niet toegestaan.
 
 Deze regels zijn gekozen omdat het meerendeel van de regelovertredende posts 1 of meer van de bovenstaande regels verbreken.
@@ -23,3 +23,9 @@ Vanuit het moderator team zijn de volgende eisen gesteld aan dit project;
 
 * Elke moderator moet de mogelijkheid hebben om de configuratie van de bot aan te passen.
 * De bot heeft een soort _kill-switch_ nodig, waarmee moderators de bot uit kunnen schakelen wanneer nodig, zonder dat zij hiervoor toegang tot de server nodig hebben.
+
+Met betrekking tot het ontwerp zijn er de volgende eisen gesteld;
+
+* Het systeem moet modulair zijn opgebouwd, zodat het mogelijk is om in de toekomst makkelijk nieuwe functionaliteit toe te voegen.
+
+## Ontwerp
