--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/10.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/10.md
@@ -3,14 +3,16 @@ Toen ik bezig was met het bedenken van leerdoelen, heb ik mijn bedrijfsbegeleide
 
 ## Werkwijze
 
-
-
-//Material design  
-//Cover pages in word
+==TODO==  
+==Material design==  
+==Word document templates==  
+==Stageplan cover==  
 
 ## Bewijsmateriaal
-Om dit leerdoel te behalen heb ik tijdens het opzetten van alle eerder genoemde documenten, mijn [Stageplan](Assets/Stageplan.docx), en dit Portfolio meer aandacht besteed aan de opmaak. Deze documenten dienen daarom ook als bewijsmateriaal voor dit leerdoel.
+Om dit leerdoel te behalen heb ik tijdens het opzetten van alle eerder genoemde documenten, mijn [Stageplan](Content/Stage3/Stageplan), en dit Portfolio meer aandacht besteed aan de opmaak. Deze documenten dienen daarom ook als bewijsmateriaal voor dit leerdoel.
 
 ## Feedback bedrijfsbegeleider/collega
+==TODO feedback==
 
 ## Reflectie
+==TODO reflectie==
