--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
@@ -21,4 +21,7 @@ Voor meer informatie over de verschillende varianten van Blazor, zie de [ASP.NET
 Deze website dient deels als bewijs dat ik dit leerdoel heb gehaald, omdat deze is gemaakt bet hehulp van Blazor WASM. De broncode van deze website is te vinden op [GitHub](https://github.com/TehNolz/Portfolio).
 
 ## Feedback bedrijfsbegeleider/collega
+==TODO feedback==
+
 ## Reflectie
+==TODO reflectie==
