--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/3.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/3.md
@@ -20,4 +20,7 @@ Als bewijsmateriaal voor dit leerdoel, heb ik een document opgezet die kort de a
 
 
 ## Feedback bedrijfsbegeleider/collega
+==TODO feedback==
+
 ## Reflectie
+==TODO reflectie==
