--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
@@ -2,8 +2,13 @@
 Het testen van software is zeer belangrijk. Als een bedrijf software oplevert waar veel en/of grote fouten in zitten, dan kan dit veel tijd en geld kosten. Om deze redenen wilde ik tijdens mijn stage leren hoe een bedrijf zoals Ranshuijsen hun software test, zodat ik deze zelfde methodes ook op mijn eigen projecten kan toepassen.
 
 # Werkwijze
+==TODO werkwijze==
 
 # Bewijsmateriaal
+==TODO bewijsmateriaal==
 
 ## Feedback bedrijfsbegeleider/collega
+==TODO feedback==
+
 ## Reflectie
+==TODO reflectie==
