--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
@@ -7,7 +7,7 @@ Toen ik echter begon aan dit project, kwam ik er al snel achter dat een dergelij
 Om te voorkomen dat ik ditzelfde probleem later opnieuw tegen kom, heb ik hier een leerdoel van gemaakt. Ik zou graag willen leren hoe bedrijven zoals Ranshuijsen grote, complexe systemen ontwerpen en plannen, zodat ik deze methodes ook bij mijn eigen projecten kan toepassen.
 
 ## Werkwijze
-
+==TODO werkwijze==
 
 ## Bewijsmateriaal
 Als bewijsmateriaal voor dit leerdoel heb ik een document opgezet waarin ik beschrijf wat mijn eerder genoemde idee precies inhoudt, wat voor een functionaliteit het systeem zal bevatten, en hoe het systeem is gestructureerd. Dit document zal ik later kunnen gebruiken om alsnog dit systeem te bouwen.
@@ -15,4 +15,7 @@ Als bewijsmateriaal voor dit leerdoel heb ik een document opgezet waarin ik besc
 Dit document is [hier](Content/Stage3/Bewijsmateriaal/6) te vinden.
 
 ## Feedback bedrijfsbegeleider/collega
+==TODO feedback==
+
 ## Reflectie
+==TODO reflectie==
