--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
@@ -24,7 +24,12 @@ Dit kan worden opgelost doormiddel van Dependency Injection. In plaats van dat d
 
 Zoals vermeld in [Leerdoel 2 - Nieuwe Technologie](Content/Stage3/Leerdoelen/2), is deze website gemaakt met Blazor. Blazor heeft het Dependency Injection design pattern al geimplementeerd, en geeft ontwikkelaars de mogelijkheid om hier verder op te bouwen.
 
-**TODO Hoe is het gebruikt?**
+Voor mijn Portfolio heb ik een *DocumentService* gemaakt. Deze service geeft mij de mogelijkheid om in mijn gehele applicatie Markdown bestanden te laden en om te zetten naar HTML, zodat ik ze op een pagina kan laten zien.
+
+Voor mijn stageopdracht heb ik een *UserService* gemaakt. Via deze service kunnen alle onderdelen van het vernieuwde CRM systeem van Ranshuijsen de gegevens van de huidige gebruiker ophalen. Ook heeft deze service een functie om te controleren of een gebruiker bepaalde toegangsrechten heeft..
 
 ## Feedback bedrijfsbegeleider/collega
+==TODO feedback==
+
 ## Reflectie
+==TODO reflectie==
