--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
@@ -25,4 +25,7 @@ Het script werkt als volgt;
 Na het uitvoeren van dit scriptbestand, is de website geheel up-to-date. Mocht in 1 van de stappen een fout optreden, dan krijg ik automatisch een bericht van GitHub die mij hierover inlicht.
 
 ## Feedback bedrijfsbegeleider/collega
+==TODO feedback==
+
 ## Reflectie
+==TODO reflectie==
