--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
@@ -13,5 +13,11 @@ De cursus is opgebouwd uit verschillende teksten en videos met informatie. Na he
 
 Deze cursus bevat een uitleg over de Algemene Verordening Gegevensbescherming (AVG), en hoe RvL hier mee omgaat. Hierbij staat ook een PDF van Het Blauwe Boekje, een boek dat extra uitleg geeft over de AVG met betrekking tot softwareontwikkeling.
 
+## Weekstart
+Elke maandag rond 10 uur houden de medewerkers van Ranshuijsen een zogehete Weekstart meeting. In deze meetings wordt er besproken wie aan welke projecten in de komende week gaan werken. Ook worden hierbij eventuele mededelingen gedeel zoals de afwezigheid van medewerkers, het uitrollen van een (update voor een) systeem, enzovoort.
+
 ## Feedback bedrijfsbegeleider/collega
+==TODO feedback==
+
 ## Reflectie
+==TODO reflectie==
