--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
@@ -15,4 +15,7 @@ De onderstaande screenshots laten zien dat ik tijdens mijn stage gebruik heb gem
 ^De _commit log_ van de SVN branch waar ik in werkte. Genomen 27-10-2010^
 
 ## Feedback bedrijfsbegeleider/collega
+==TODO feedback==
+
 ## Reflectie
+==TODO reflectie==
