--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
@@ -14,6 +14,9 @@ De onderstaande screenshots laten zien dat ik tijdens mijn stage gebruik heb gem
 ![](\\Assets\\Images\\SVN_commit_log.png)  
 ^De _commit log_ van de SVN branch waar ik in werkte. Genomen 27-10-2010^
 
+![](\\Assets\\Images\\SVN_merge.png)  
+^Een screenshot van _TortoiseMerge_, een tool om _Merge conflicten_ op te lossen. Genomen 13-11-2020^
+
 ## Feedback bedrijfsbegeleider/collega
 ==TODO feedback==
 
