Content updates. Move homepage CSS to its own file.

--- a/Portfolio/Pages/Content/Stage3/Bewijsmateriaal/4.md
+++ b/Portfolio/Pages/Content/Stage3/Bewijsmateriaal/4.md
@@ -51,5 +51,5 @@ De nadelen van Blazor Server zij als volgt;
 * Vrijwel alle acties die gebruikers binnen uitvoeren moet via de SignalR verbinding naar de server worden verzonden, wat voor extra netwerkactiviteit zorgt. Ook betekent dit dat indien uw netwerk niet snel genoeg is of overbelast raakt, de applicatie zeer traag zal werken.
 
 ## Mijn Advies
-Persoonlijk heb ik weinig interesse in frontend development. Echter maakt Blazor dit werk zo eenvoudig, dat zelfs ik elk bedrijf zou aanraden om Blazor te gebruiken. Blazor is zeer makkelijk op te pakken, waardor het mogelijk is om binnen enkele minuten een simpele interactieve website in elkaar te zetten. Zelfs voor C# ontwikkelaars die weinig ervaring hebben met het bouwen van websites zal het eenvoudig zijn om Blazor te gebruiken.
+Naar mijn mening maakt Blazor het zo eenvoudig om websites te bouwen, dat ik het zelfs zou aanranden aan ontwikkelaars die weinig interesse hebben in frontend development. Blazor is zeer makkelijk op te pakken, waardor het mogelijk is om binnen enkele minuten een simpele interactieve website in elkaar te zetten. Zelfs voor C# ontwikkelaars die weinig ervaring hebben met het bouwen van websites zal het eenvoudig zijn om Blazor te gebruiken.
 
