--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
@@ -1,24 +1,24 @@
 ﻿# Leerdoel 2 - Nieuwe Technologie
 Het is belangrijk voor softwareontwikkelaars en andere ICT-medewerkers om mee te gaan met de laatste ontwikkelingen, en om regelmatig nieuwe technologieën te onderzoeken. Daarom had ik besloten om tijdens mijn stage tenminste 1 nieuwe technologie te onderzoeken en te gebruiken.
 
-Als onderdeel van mijn stageopdracht heb ik het CRM systeem van Ranshuijsen deels omgezet naar Blazor, een redelijk nieuw onderdeel van Microsoft’s ASP.NET Core framework. Ik heb dan ook dit leerdoel behaald door deze technologie te bestuderen en te gebruiken.
-
-Ik heb aan dit leerdoel gewerkt door middel van mijn stageopdracht, en door dit portfolio. Tijdens mijn stageopdracht heb ik een deel van het CRM omgezet naar Blazor. Ook heb ik dit gehele portfolio gebruikt met behulp van Blazor WebAssembly.
+Als onderdeel van mijn stageopdracht heb ik het CRM systeem van Ranshuijsen deels omgezet naar Blazor, een vrij recent onderdeel van Microsoft’s ASP.NET Core framework. Ik heb dan ook dit leerdoel behaald door deze nieuwe technologie te bestuderen en te gebruiken tijdens mijn stageopdracht, en ook tijdens het opzetten van deze website.
 
 ## Blazor
-[Blazor](https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor) is een onderdeel van het ASP.NET Core. Terwijl de meeste interactieve websites gebouwd zijn met behulp van JavaScript, geeft Blazor ontwikkelaars de mogelijkheid om websites te bouwen met C# code.
+[Blazor](https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor) is een onderdeel van het ASP.NET Core. Blazor geeft ontwikkelaars de mogelijkheid om interactieve websites te bouwen met C#, terwijl dit normaalgesproken wordt gedaan met JavaScript.
 
 Op het moment zijn er twee varianten van Blazor beschikbaar. De eerste variant is Blazor Server, waarbij alle C# code op de server wordt uitgevoerd. De browser download alleen een klein JavaScript package, en gebruikt deze om via een zogehete *SignalR* verbinding te maken met de server. Alle acties van de client (bijvoorbeeld button clicks) en alle UI updates van de server worden via deze verbinding verzonden. Deze variant vereist een server om alle code op uit te voeren, en werkt daardoor niet met statische webservers zoals [GitHub Pages](https://pages.github.com/).
 
-De tweede variant is Blazor WebAssembly (Blazor WASM). Deze variant stuurt de gehele Blazor applicatie, alle dependencies, en een kleine versie van de .NET Runtime naar de browser. De gehele applicatie wordt dan uitgevoerd binnen de browser, net zoals de meeste websites dit doen. In tegenstelling tot Blazor Server kan Blazor WebAssembly wel worden gebruikt samen met statische webservers, omdat er geen aparte server nodig is. Als de browser alle benodigde bestanden kan downloaden, dan is dat voldoende.
+De tweede variant is Blazor WebAssembly (afgekort Blazor WASM). Deze variant stuurt de gehele Blazor applicatie, alle dependencies, en een kleine versie van de .NET Runtime naar de browser. De gehele applicatie wordt dan uitgevoerd binnen de browser, net zoals de meeste websites dit doen. In tegenstelling tot Blazor Server kan Blazor WebAssembly wel worden gebruikt samen met statische webservers, omdat er geen aparte server nodig is. Als de browser alle benodigde bestanden kan downloaden, dan is dat voldoende.
 
 Microsoft is bezig met het ontwikkelen van drie andere Blazor varianten, die elk weer in andere scenarios handig kunnen zijn. Op het moment is er weinig informatie over deze varianten beschikbaar.
 
-Voor meer informatie over de verschillende varianten van Blazor, zie de [ASP.NET Core Blazor hosting models](https://docs.microsoft.com/en-us/aspnet/core/blazor/hosting-models?view=aspnetcore-3.1) pagina op de officiele Microsoft website.
+De voor- en nadelen van deze technologie zijn te lezen in het [Adviesrapport](Content/Stage3/Bewijsmateriaal/4) dat ik heb geschreven als bewijsmateriaal voor [Leerdoel 4](Content/Stage3/Leerdoelen/4). Voor meer informatie over de verschillende varianten van Blazor, zie de [ASP.NET Core Blazor hosting models](https://docs.microsoft.com/en-us/aspnet/core/blazor/hosting-models?view=aspnetcore-3.1) pagina op de officiele Microsoft website.
 
 ## Bewijsmateriaal
 
 Deze website dient deels als bewijs dat ik dit leerdoel heb gehaald, omdat deze is gemaakt bet hehulp van Blazor WASM. De broncode van deze website is te vinden op [GitHub](https://github.com/TehNolz/Portfolio).
+
+Ook heb ik als onderdeel van mijn stageopdracht meegeholpen om een oud ASP.NET MVC project om te zetten naar Blazor Server. Zie [deze pagina](Content/Stage3/Stageopdracht) voor meer informatie hierover.
 
 ## Feedback bedrijfsbegeleider/collega
 ==TODO feedback==
