--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
@@ -3,9 +3,12 @@ Het testen van software is zeer belangrijk. Als een bedrijf software oplevert wa
 
 # Werkwijze
 ==TODO werkwijze==
+==Hoe test Ranshuijsen?==
 
 # Bewijsmateriaal
-==TODO bewijsmateriaal==
+==TODO bewijsmateriaal==  
+==Unit tests?==  
+==Test rapportages?==  
 
 ## Feedback bedrijfsbegeleider/collega
 ==TODO feedback==
