--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
@@ -2,12 +2,13 @@
 
 In mijn vrije tijd doe ik vrijwillergerswerk als moderator van de Minecraft community op Reddit. Mijn taken hierbij bestaan onder andere uit het handhaven van de community-regels en het verwijderen van overtredende posts. Enkele maanden voor mijn stage besefte ik dat een groot deel van dit werk zou kunnen automatiseren doormiddel van een Reddit bot. Het zou bijvoorbeeld niet moeilijk moeten zijn om te controleren of een gebruiker te vaak dingen upload. Een dergelijke bot zou de werkdruk van de moderators flink kunnen verlagen, en zou ervoor zorgen dat wij sneller en op een consistentere manier kunnen reageren op meldingen van gebruikers.
 
-Toen ik echter begon aan dit project, kwam ik er al snel achter dat een dergelijke bot veel complexer zou zijn dan ik had verwacht. Ik moest regelmatig mijn werk stilleggen omdat ik iets over het hoofd had gezien. Ook zat ik vaak stukken code te herschrijven, zonder veel vooruitgang te maken. Ik verloor daarom ook al snel mijn motivatie, en legde het project neer.
+Toen ik echter begon aan dit project, kwam ik er al snel achter dat een dergelijke bot veel complexer zou zijn dan ik had verwacht. Ik moest regelmatig mijn werk stilleggen omdat ik iets over het hoofd had gezien, waar ik vervolgens weer een tijd lang over moest nadenken. Ook zat ik hierdoor vaak stukken code te herschrijven, zonder veel vooruitgang te maken. Ik verloor daarom ook al vrij snel mijn motivatie, en legde het project neer.
 
-Om te voorkomen dat ik ditzelfde probleem later opnieuw tegen kom, heb ik hier een leerdoel van gemaakt. Ik zou graag willen leren hoe bedrijven zoals Ranshuijsen grote, complexe systemen ontwerpen en plannen, zodat ik deze methodes ook bij mijn eigen projecten kan toepassen.
+Ik wilde daarom tijdens mijn stage leren hoe bedrijven zoals Ranshuijsen grote, complexe systemen ontwerpen en plannen, zodat ik deze methodes zelf ook kan gebruiken. Daarom heb ik besloten hier een leerdoel van te maken.
 
 ## Werkwijze
-==TODO werkwijze==
+==TODO werkwijze==  
+==hoe wordt software architecture gemaakt (yourdan?)==
 
 ## Bewijsmateriaal
 Als bewijsmateriaal voor dit leerdoel heb ik een document opgezet waarin ik beschrijf wat mijn eerder genoemde idee precies inhoudt, wat voor een functionaliteit het systeem zal bevatten, en hoe het systeem is gestructureerd. Dit document zal ik later kunnen gebruiken om alsnog dit systeem te bouwen.
