--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
@@ -1,11 +1,15 @@
-﻿# Leerdoel 8 - CI/CD
+﻿# Leerdoel 8 - Deployment
 
-Naast Design Patterns, ben ik tijdens het zoeken naar informatie ook vaak de termen Continuous Integration en Continuous Deployment (CI/CD) tegengekomen. Deze termen verwijzen naar systemen die automatisch nieuwe versies van programma’s kunnen testen en uitrollen naar servers. Ik wist echter niet hoe ik zelf een dergelijk systeem kon opzetten, of wat het nut hiervan precies was. Ik heb daarom besloten om hier een leerdoel van te maken.
+Tijdens het zoeken naar informatie voor mijn 1ste- en 2dejaars projecten kwam ik vaak informatie tegen over het uitrollen van (nieuwe en bestaande) systemen. Zo kwam ik bijvoorbeeld de termen _Continuous Deployment_ en _Continuous Integration_ (CI/CD) tegen, wat refereert naar systemen die volledig automatisch andere systemen kunnen klaarmaken voor gebruik. Omdat ik meer wilde weten over hoe systemen worden uitgerolt binnen een organisatie, heb ik besloten om hier een leerdoel van te maken. Dit ook omdat ik verwacht later tijdens mijn werk regelmatig dit soort processen te moeten doorlopen.
 
 ## Werkwijze
 
+Ik ben met dit leerdoel begonnen door te onderzoeken of ik een _CI/CD pipeline_ of ander deployment process kon opzetten voor deze website. Al vrij snel kwam ik [GitHub Actions](https://github.com/features/actions) tegen; een onderdeel van GitHub waarmee ontwikkelaars gemakkelijk een _CI/CD pipeline_ konden opzetten om zo hun applicaties automatisch te _builden_, testen, en uit te rollen. Toevallig had ik deze functionaliteit eerder al eens gebruikt voor een hobbyproject, zonder te realiseren dat ik een _CI/CD pipeline_ had opgezet. Het was daarom ook niet moeilijk om op basis van dit hobbyproject, de [GitHub Actions documentatie](https://docs.github.com/en/free-pro-team@latest/actions), en [informatie van het internet](https://swimburger.net/blog/dotnet/how-to-deploy-aspnet-blazor-webassembly-to-github-pages) een nieuwe pipeline op te zetten voor deze website. Een beschrijving van deze pipeline is hieronder te vinden als Bewijsmateriaal 1.
 
-## Bewijsmateriaal
+Ranshuijsen gebruikt echter een geheel ander process om hun applicaties uit te rollen. Zij hebben hiervoor zelf een tool ontwikkeld, genaamd _RvlBuildToolkit_.
+==TODO Uitzoeken hoe deze tool werkt==
+
+## Bewijsmateriaal 1 - GitHub Actions
 
 Ook deze website maakt gebruik van een CI/CD pipeline. Deze Pipeline is opgezet met behulp van [GitHub Actions](https://github.com/features/actions).
 
@@ -15,7 +19,7 @@ Het script werkt als volgt;
 
 * De Git repository waar de broncode van de website in staat wordt gedownload,
 * .NET Core wordt klaargemaakt voor gebruik,
-* Alle _unit tests_ (zie [Leerdoel 5 - Testen](Content/Stage3/Leerdoelen/5)) worden uitgevoerd. Mocht er een test mislukken, dan zal de update direct worden gestopt.
+* Alle _unit tests_ (zie [Leerdoel 5 - Testen](Content/Stage3/Leerdoelen/5)) worden uitgevoerd. Mocht er een test mislukken, dan zal de update direct worden gestopt en zal ik hier een melding over krijgen.
 * De website wordt genereerd. Alle bestanden worden door .NET Core klaargemaakt zodat een browser ze zou kunnen laden.
 * De _base tag_ wordt aangepast, zodat alle pagina links binnen in de website correct zullen functioneren.
 * Een fix wordt toegepast zodat 404-foutpaginas worden doorgestuurd naar de hoofdpagina van mijn website, zodat Blazor deze fouten zelf kan afhandelen in plaats van dat GitHub dit doet.
@@ -23,6 +27,8 @@ Het script werkt als volgt;
 * De website wordt gepubliceerd naar GitHub pages. Dit wordt gedaan doormiddel van [github-pages-deploy-action](https://github.com/JamesIves/github-pages-deploy-action).
 
 Na het uitvoeren van dit scriptbestand, is de website geheel up-to-date. Mocht in 1 van de stappen een fout optreden, dan krijg ik automatisch een bericht van GitHub die mij hierover inlicht.
+
+## Bewijsmateriaal 2 - Deploymentproces van Ranshuijsen
 
 ## Feedback bedrijfsbegeleider/collega
 ==TODO feedback==
