--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
@@ -11,10 +11,18 @@ De onderstaande screenshot laat zien dat ik alle modules en toetsen die bij deze
  
 De cursus is opgebouwd uit verschillende teksten en videos met informatie. Na het doorlezen van sommige modules volgt er een korte toets met een aantal meerkeuzevragen over het materiaal van die module. Ik heb deze toetsen allemaal met een 10 afgerond.
 
-Deze cursus bevat een uitleg over de Algemene Verordening Gegevensbescherming (AVG), en hoe RvL hier mee omgaat. Hierbij staat ook een PDF van Het Blauwe Boekje, een boek dat extra uitleg geeft over de AVG met betrekking tot softwareontwikkeling.
+Ook bevat de cursus een uitleg over de Algemene Verordening Gegevensbescherming (AVG), en hoe Ranshuijsen hier mee omgaat. Hierbij staat ook een PDF van Het Blauwe Boekje, een boek dat extra uitleg geeft over de AVG met betrekking tot softwareontwikkeling.
 
 ## Weekstart
-Elke maandag rond 10 uur houden de medewerkers van Ranshuijsen een zogehete Weekstart meeting. In deze meetings wordt er besproken wie aan welke projecten in de komende week gaan werken. Ook worden hierbij eventuele mededelingen gedeel zoals de afwezigheid van medewerkers, het uitrollen van een (update voor een) systeem, enzovoort.
+Elke maandag rond 10 uur houden de medewerkers van Ranshuijsen een zogehete Weekstart meeting. In deze meetings wordt er besproken wie aan welke projecten in de komende week gaan werken. Ook worden hierbij eventuele mededelingen gedeel zoals de afwezigheid van medewerkers, het uitrollen van een (update voor een) systeem, enzovoort. Ik ben bij elk van deze meetings aanwezig geweest.
+
+## Huisstijl
+Ranshuijsen heeft ook een eigen huijsstijl voor alle documenten en emails die zij schrijven. Door gebruik te maken van sjablonen (bijvoorbeeld Word templates) kunnen zij ervoor zorgen dat al hun documenten en emails dezelfde opmaak hebben. Deze stijl heb ik zelf ook aangehouden bij de documenten die ik heb geschreven als onderdeel van mijn stageopdracht.
+
+## ISO 27001 Certificering
+Ranshuijsen voldoet aan de eisen die gesteld worden in [ISO 27001](https://nl.wikipedia.org/wiki/ISO/IEC_27001). Dit betekent dat alle medewerkers van Ranshuijsen zich aan een aantal regels moeten houden met betrekking tot informatiebeveiliging.
+
+Het is bijvoorbeeld voor medewerkers niet toegestaan om data op te slaan op persoonlijke apparaten of mee naar huis te nemen. Medewerkers die willen thuiswerken moeten daarom via _Remote Desktop_ verbinding maken met hun werkcomputer, om vervolgens op afstand hierop te werken.
 
 ## Feedback bedrijfsbegeleider/collega
 ==TODO feedback==
