--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/4.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/4.md
@@ -5,13 +5,12 @@ Als ik een technologie goed wil beheersen, dan moet ik ook kunnen achterhalen wa
 
 Ik ben van mening dat een ontwikkelaar het beste een beeld van een technologie kan krijgen door het simpelweg zelf te gebruiken. Er zijn genoeg blog posts en nieuwsartiekelen die de voor- en nadelen van een technologie laten zien, maar dit doen zij allemaal vanaf hun eigen perspectief. Wat zij als voordelen zien, zou voor u juist nadeling kunnen zijn. En wat zij als nadelen zien, kan voor u juist voordelig zijn.
 
-Daarom heb ik de voor- en nadelen van Blazor onderzocht door deze technologie te gebruiken tijdens mijn stageopdracht, en tijdens het opzetten van mijn portfolio. Ik heb hierdoor een goed beeld van de technologie weten op te bouwen.
+Door gebruik te maken van Blazor tijdens mijn stageopdracht en tijdens het opzetten van mijn portfolio, heb ik een goed beeld kunnen opbouwen van de voor- en nadelen van deze technologie. Deze informatie heb ik vervolgens verwerkt in een advies rapport (zie Bewijsmateriaal), die deze voor- en nadelen allemaal kort beschrijft.
 
 ## Bewijsmateriaal
 Om dit leerdoel te behalen heb ik besloten om een kort adviesrapport te schrijven, die de belangrijkste voor- en nadelen van Blazor beschrijft. Dit adviesrapport is [hier](Content/Stage3/Bewijsmateriaal/4) te vinden.
 
-Persoonlijk heb ik weinig interesse in frontend development. Echter maakt Blazor dit werk zo eenvoudig, dat zelfs ik elk bedrijf zou aanraden om Blazor te gebruiken. Blazor is zeer makkelijk op te pakken, waardor het mogelijk is om binnen enkele minuten een simpele interactieve website in elkaar te zetten. Zelfs voor C# ontwikkelaars die weinig ervaring hebben met het bouwen van websites zal het eenvoudig zijn om Blazor te gebruiken.
-
+Naar mijn mening maakt Blazor het zo eenvoudig om websites te bouwen, dat ik het zelfs zou aanranden aan ontwikkelaars die weinig interesse hebben in frontend development. Blazor is zeer makkelijk op te pakken, waardor het mogelijk is om binnen enkele minuten een simpele interactieve website in elkaar te zetten. Zelfs voor C# ontwikkelaars die weinig ervaring hebben met het bouwen van websites zal het eenvoudig zijn om Blazor te gebruiken.
 
 ## Feedback bedrijfsbegeleider/collega
 ==TODO feedback==
