--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
@@ -9,24 +9,22 @@ Om het kort uit te leggen; een Design Pattern is een generieke en daarom herbrui
 
 Neem bijvoorbeeld de Model, View, Controller (MVC) design pattern. Deze design pattern wordt voornamelijk gebruikt voor het bouwen van websites, maar kan ook voor andere applicaties worden gebruikt. Software die MVC gebruiken zijn vrijwel altijd opgebouwd uit 3 verschillende lagen;
 
-* De Model laag, die aangeeft hoe de data die het programma is gestructureerd,
+* De Model laag, die aangeeft hoe de data die het programma gebruikt is gestructureerd,
 * De View laag, die de verschillende interfaces en menus bevat die de gebruiker zal zien en gebruiken,
-* De Controller laag, die de communicatie tussen de andere twee lagen faciliteerd.
+* De Controller laag, die de communicatie tussen de andere twee lagen faciliteerd en de _business logic_ van het systeem bevat.
 
 ## Dependency Injection
-_Dependency Injection_ is ook een dergelijke design pattern. Applicaties die deze design pattern gebruiken zijn niet direct aan hun dependencies verbonden. In plaats daarvan worden ze "geinjecteerd"; er wordt een object van de dependency gemaakt, die vervolgens op meerdere plekken in de applicatie gebruikt wordt. Dit zorgt ervoor dat deze dependencies gemakkelijk kunnen worden nagemaakt en vervangen, zodat het makkelijker wordt om de applicatie te testen.
+_Dependency Injection_ is ook een dergelijke design pattern. Applicaties die deze design pattern gebruiken zijn niet direct aan hun dependencies verbonden. In plaats daarvan worden ze "geinjecteerd"; er wordt een object van de dependency gemaakt, die vervolgens als _service_ beschikbaar wordt gemaakt voor de verschillende onderdelen van het systeems. Dit zorgt ervoor dat deze dependencies gemakkelijk kunnen worden nagemaakt en vervangen, zodat het makkelijker wordt om de applicatie te testen.
 
-Stel dat u een applicatie heeft ontwikkeld die data met een datum en tijdstip ontvangt van een externe dienst en daarmee een actie uitvoert. Het blijkt dat uw applicatie niet goed om kan gaan met schrikkeljaren, waardoor er steeds fouten optreden als er data met een datum van 29 Februari wordt ontvangen. U heeft echter geen controle over de externe dienst die de data verstuurd, waardoor het probleem moeilijk te reproduceren is.
+Stel dat u een applicatie heeft ontwikkeld die data met een datum en tijdstip ontvangt van een externe dienst en op basis van deze data acties onderneemt. Het blijkt dat uw applicatie niet goed om kan gaan met schrikkeljaren, waardoor er steeds fouten optreden als er data met een datum van 29 Februari wordt ontvangen. U heeft echter geen controle over de externe dienst die de data verstuurd, waardoor het probleem moeilijk te reproduceren is.
 
-Dit kan worden opgelost doormiddel van Dependency Injection. In plaats van dat de verbinding met de externe dienst direct aan uw applicatie is gekoppeld, wordt deze als object geinjecteerd. Dit object kan gemakkelijk worden vervangen met een namaak object, die altijd data genereert met een datum van 29 Februari. Op deze manier heeft u een manier om gemakkelijk het probleem te reproduceren, waardoor u makkelijk kan controleren of het probleem is verholpen.
+Dit kan worden opgelost doormiddel van Dependency Injection. In plaats van dat de verbinding met de externe dienst direct aan uw applicatie is gekoppeld, wordt deze als object geinjecteerd. Dit object kan gemakkelijk door u worden vervangen met een namaak object, die altijd data genereert met een datum van 29 Februari. Dit namaak object geeft u de mogelijkheid om de fout ten allen tijden te reproduceren, waardoor het veel makkelijker wordt om de fout op te lossen.
 
 ## Bewijsmateriaal
 
-Zoals vermeld in [Leerdoel 2 - Nieuwe Technologie](Content/Stage3/Leerdoelen/2), is deze website gemaakt met Blazor. Blazor heeft het Dependency Injection design pattern al geimplementeerd, en geeft ontwikkelaars de mogelijkheid om hier verder op te bouwen.
+Zoals eerder vermeld, is deze website gemaakt met Blazor. Blazor heeft het Dependency Injection design pattern al geimplementeerd, en geeft ontwikkelaars de mogelijkheid om hier verder op te bouwen. Dit heb ik gedaan door een  *DocumentService* te bouwen. Deze service geeft mij de mogelijkheid om in mijn gehele applicatie _Markdown_ bestanden te laden en om te zetten naar HTML, zodat ik ze op een pagina kan laten zien.
 
-Voor mijn Portfolio heb ik een *DocumentService* gemaakt. Deze service geeft mij de mogelijkheid om in mijn gehele applicatie Markdown bestanden te laden en om te zetten naar HTML, zodat ik ze op een pagina kan laten zien.
-
-Voor mijn stageopdracht heb ik een *UserService* gemaakt. Via deze service kunnen alle onderdelen van het vernieuwde CRM systeem van Ranshuijsen de gegevens van de huidige gebruiker ophalen. Ook heeft deze service een functie om te controleren of een gebruiker bepaalde toegangsrechten heeft..
+Voor mijn stageopdracht heb ik een *UserService* gemaakt. Via deze service kunnen alle onderdelen van het vernieuwde CRM systeem van Ranshuijsen de gegevens van de huidige ingelogde gebruiker ophalen.
 
 ## Feedback bedrijfsbegeleider/collega
 ==TODO feedback==
